[gd_scene load_steps=24 format=2]

[ext_resource path="res://Rooms/Area6/Assets/call_bell.png" type="Texture" id=1]
[ext_resource path="res://Rooms/Area6/Assets/shorterbell.wav" type="AudioStream" id=2]
[ext_resource path="res://Rooms/Area6/Assets/PropScenes/CallBell.gd" type="Script" id=3]
[ext_resource path="res://Rooms/Area6/Assets/PropScenes/CallBellSystem.gd" type="Script" id=4]
[ext_resource path="res://Rooms/Area6/Assets/pink_boat.png" type="Texture" id=5]
[ext_resource path="res://Rooms/Area6/Assets/players_in_boat.png" type="Texture" id=6]
[ext_resource path="res://Rooms/Area6/Assets/ground_arrow.png" type="Texture" id=7]
[ext_resource path="res://Rooms/Area6/Assets/boat_oar.png" type="Texture" id=8]
[ext_resource path="res://Rooms/Area6/Assets/poppyhart_boaters.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 3 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("call_bell:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BellAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "ring"
tracks/0/type = "value"
tracks/0/path = NodePath("../BellAudio:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("call_bell:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("call_bell:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BellAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "ring"
tracks/0/type = "value"
tracks/0/path = NodePath("../BellAudio:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("call_bell:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 70, 37 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 70, 0, 70, 37 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CallBellSystem" type="YSort" groups=[
"callbell_system",
]]
script = ExtResource( 4 )

[node name="BellAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
pitch_scale = 1.69

[node name="CallBell1" type="StaticBody2D" parent="."]
script = ExtResource( 3 )
bell_number = 1

[node name="call_bell" type="Sprite" parent="CallBell1"]
texture = ExtResource( 1 )
offset = Vector2( 0, -10 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CallBell1"]
shape = SubResource( 1 )

[node name="Interaction" type="Area2D" parent="CallBell1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CallBell1/Interaction"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CallBell1"]
anims/idle = SubResource( 3 )
anims/ring = SubResource( 4 )

[node name="CallBell2" type="StaticBody2D" parent="."]
position = Vector2( 144, -14 )
script = ExtResource( 3 )
bell_number = 2

[node name="call_bell" type="Sprite" parent="CallBell2"]
texture = ExtResource( 1 )
offset = Vector2( 0, -10 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CallBell2"]
shape = SubResource( 1 )

[node name="Interaction" type="Area2D" parent="CallBell2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CallBell2/Interaction"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CallBell2"]
anims/idle = SubResource( 5 )
anims/ring = SubResource( 6 )

[node name="Pos1" type="Position2D" parent="."]
position = Vector2( 22, 36 )

[node name="Pos2" type="Position2D" parent="."]
position = Vector2( 114, 0 )

[node name="Boat" type="AnimatedSprite" parent="."]
position = Vector2( 77, 20 )
frames = SubResource( 14 )
frame = 1
playing = true
offset = Vector2( 0, 8 )

[node name="PlayersInBoat" type="Sprite" parent="Boat"]
visible = false
position = Vector2( -12, 1 )
texture = ExtResource( 6 )

[node name="poppyhart_boaters" type="Sprite" parent="Boat"]
position = Vector2( 8, 1 )
texture = ExtResource( 9 )
hframes = 6

[node name="BoatOar" type="AnimatedSprite" parent="Boat/poppyhart_boaters"]
position = Vector2( 2, 17 )
frames = SubResource( 11 )

[node name="Tween" type="Tween" parent="."]

[node name="ground_arrow" type="Sprite" parent="."]
position = Vector2( -4, 6 )
texture = ExtResource( 7 )
offset = Vector2( 0, 6 )
hframes = 8
frame = 2

[node name="ground_arrow2" type="Sprite" parent="."]
position = Vector2( 140, -9 )
texture = ExtResource( 7 )
offset = Vector2( 0, 6 )
hframes = 8
frame = 6
